# ultimate_tech_challenge

./: LICENSE  Makefile  README.md  pyproject.toml
notebooks/: ultimate_challenge.ipynb
reports/tables/: model_performance.csv
ultimate_tech/: __init__.py  dataset.py  features.py  plots.py
ultimate_tech/modeling/: predict.py  train.py
