[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ultimate_tech"
version = "0.0.1"
description = "A data science challenge focused on A/B test design for driver logistics and predictive classification for rider retention using Python."
authors = [
  { name = "Allison Schiltz" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["ultimate_tech"]
include = ["pyproject.toml", "ultimate_tech/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ultimate_tech"]
force-sort-within-sections = true

